--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -4,9 +4,9 @@ import Partners from "./Partners.astro";
 ---
 
 <section class='allTechnologies'>
-  <h2 class='subtitle'>Mes technologies</h2>
-  <h3>Mes technologies</h3>
-  <p>Phrase sur les technos</p>
+  <h2 class='subtitle'>Mes bagages</h2>
+  <h3>Mes technologies favorites</h3>
+  <p>Ces technologies modernes et éprouvées sont la clé pour développer vos projets web en un minimum de temps et un minimum de coûts.</p>
   <div class='technoGrid'>
     <div class='technoCard'>
       <h3>Front-end</h3>
@@ -67,8 +67,9 @@ import Partners from "./Partners.astro";
     padding-bottom: 10rem;
     h2 {
       position: relative;
-      left: -16%;
-      text-align: left;
+      right: -16%;
+      text-align: right;
+      align-self: flex-end;
     }
     h3 {
       font-size: 2rem;
@@ -119,7 +120,7 @@ import Partners from "./Partners.astro";
       background-repeat: no-repeat;
       background-position: center top;
       h2 {
-        left: -1rem;
+        right: -1rem;
       }
       .technoGrid {
         grid-template-columns: 1fr;
