--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -5,7 +5,7 @@ import BorderedButton from "./BorderedButton.astro";
 <section class='contactSection'>
   <div class='fog'></div>
   <h2>
-    Et si on discutait de <strong>vos projets</strong><br /><em>ensemble ?</em>
+    Prêt à <strong>embarquer</strong> pour votre<br /><em>prochain projet ?</em>
   </h2>
   <BorderedButton
     addedClasses='contactButton'
@@ -47,12 +47,13 @@ import BorderedButton from "./BorderedButton.astro";
       font-weight: normal;
       z-index: 2;
       strong {
-        font-weight: normal;
+        font-weight: 100;
         font-style: italic;
       }
       em {
         font-size: 4rem;
         font-weight: bold;
+        font-style: normal;
       }
     }
     .shadow {
