--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -3,9 +3,9 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='ecoconception' id='ecoconception'>
-  <h2 class='subtitle'>Eco-conception</h2>
+  <h2 class='subtitle'>Au pays de l'éco-conception</h2>
   <div class='content'>
-    <h3>Ce qu'un site éco-conçu n'est pas ?</h3>
+    <h3>Faisons le tour des idées reçues,<br />ce qu'un site éco-conçu N'est PAS :</h3>
     <ul>
       <li>
         Un Wordpress. Un site éco-conçu ne laisse pas de serveur ni de base de
@@ -16,11 +16,11 @@ import BorderedButton from "./BorderedButton.astro";
         économie d'énergie significative.
       </li>
       <li>
-        Un site sans image. Bien optimisés, les medias ne sont pas un problème.
+        Un site sans image. Bien optimisés, les medias ne sont pas un problème et votre site peut briller de mille feux.
       </li>
       <li>
         Un site figé. Les animations correctement conçues sont peu gourmandes en
-        ressources.
+        ressources. Ajoutons de la vie à votre site !
       </li>
       <li>
         Un site impossible à modifier en temps réel. Les technologies modernes
@@ -28,7 +28,7 @@ import BorderedButton from "./BorderedButton.astro";
         l'environnement.
       </li>
     </ul>
-    <BorderedButton link="/services">Découvrir qui je suis</BorderedButton>
+    <BorderedButton link="/services">Découvrez qui je suis</BorderedButton>
   </div>
   <div class='peacock'>
     <img src='/images/peacock.webp' alt='Peacock' width='747' height='783' />
