--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -3,22 +3,21 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='lastWork'>
-  <h2 class='subtitle'>Dernière réalisation</h2>
+  <h2 class='subtitle'>Dernière aventure web</h2>
   <div class='lastWorkContent'>
     <div class='gridText'>
-      <h3>Découvrez ma dernière contribution</h3>
+      <h3>Découvrez ma dernière réalisation web</h3>
       <p>
         Refonte d'un site vitrine clé en main en partenariat avec l'agence
         lilloise Dalt.
       </p>
       <ul>
-        <li>Refonte de l'identité visuelle</li>
         <li>Amélioration de l'expérience utilisateur</li>
         <li>Amélioration des performances</li>
         <li>Refonte complète du tunnel de commande</li>
       </ul>
       <BorderedButton link='portfolio'
-        >Découvrir mes réalisations
+        >Découvrez mes réalisations
       </BorderedButton>
     </div>
     <div class='gridImage'>
