--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -19,7 +19,7 @@ const { inverted = false, title = true } = Astro.props;
 ---
 
 <section class='partnersSection'>
-  {title && <h2>Ils m'ont fait confiance</h2>}
+  {title && <h2>On a déjà fait du chemin ensemble</h2>}
   <div class='partnersContainer'>
     <div class='partners'>
       {
