--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -5,14 +5,15 @@ import BorderedButton from "./BorderedButton.astro";
 <section class='prices'>
   <h2 class='subtitle'>Services web</h2>
   <h3 class='cardsTitle'>Mes services web</h3>
+  <p class='description'>Retrouvez mes tarifs adaptés aux petits comme aux grands budgets.</p>
   <div class='priceCard'>
     <div class='header'>
-      <h3>Développement de site web statique</h3>
+      <h3>Développement de site web</h3>
       <span class='price'>A partir de 2000€</span>
     </div>
     <hr />
     <ul class='content'>
-      <li>Sur mesure</li>
+      <li>Sur-mesure</li>
       <li>Nombre de pages fixe</li>
       <li>Optimisé et performant</li>
       <li>Eco-conçu</li>
@@ -26,15 +27,15 @@ import BorderedButton from "./BorderedButton.astro";
         <div class='header'>
           <h3>Page builder</h3>
         </div>
-        <p class='content'>Modifiez vous-mêmes les pages de votre site à votre convenance.</p>
+        <p class='content'>Ajoutez et modifiez vous-mêmes simplement et sans effort les pages de votre site à votre convenance.</p>
       </div>
       <div class='option'>
         <div class='header'>
           <h3>Animations</h3>
         </div>
         <p class='content'>
-          Ajouter de la vie à votre site avec des animations performantes et
-          impactantes
+          Ajoutez de la vie à votre site avec des animations performantes et
+          impactantes.
         </p>
       </div>
     </div>
@@ -44,14 +45,11 @@ import BorderedButton from "./BorderedButton.astro";
       addedClasses='pricesContactButton'
       link='mailto:info.lanvink@gmail.com'
     >
-      Contactez-moi !
+      Contactez-moi pour un projet web
     </BorderedButton>
   </div>
   <h3 class='cardsTitle'>Mes partenaires</h3>
-  <p class='description'>
-    Je travaille avec des freelances graphistes qui permettront de réaliser
-    votre projet de site web de bout en bout.
-  </p>
+  <p class='description'>Je m'entoure de freelances pour mener vos projets web à bon port.</p>
   <div class='priceCard'>
     <div class='header'>
       <h3>Identité visuelle</h3>
@@ -77,11 +75,11 @@ import BorderedButton from "./BorderedButton.astro";
     <hr />
     <div class='header'>
       <h3>UX Design</h3>
-      <span class='price'>A partir de 600€</span>
+      <span class='price'>A partir de 1000€</span>
     </div>
     <hr />
     <ul class='content'>
-      <li>Conception de maquettes utilisateurs</li>
+      <li>Conception de parcours utilisateurs</li>
       <li>Création de wireframes (maquettes techniques)</li>
       <li>Interviews utilisateurs</li>
       <li>Tests utilisateurs</li>
@@ -101,7 +99,7 @@ import BorderedButton from "./BorderedButton.astro";
       addedClasses='pricesContactButton'
       link='mailto:info.lanvink@gmail.com'
     >
-      Contactez-moi !
+      Contactez-moi pour la partie graphique
     </BorderedButton>
   </div>
   <svg
