--- a/src/components/SquareHammer.astro
+++ b/src/components/SquareHammer.astro
@@ -1,6 +1,6 @@
 <div class='squareHammer'>
   <div class='square'>
-    <span class='text'>Design sur mesure</span>
+    <span class='text'>Design sur-mesure</span>
   </div>
   <div class='square'>
     <span class='text'>Facilité d'utilisation et clef en main</span>
