--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -7,14 +7,15 @@ import Eclair from "./Eclair.astro";
   <Eclair />
   <div class='services'>
     <div class='service'>
-      <h3>Développeur Fullstack</h3>
+      <h3>Développeur Fullstack à Lille et dans la métropole</h3>
       <p>
-        J'intègrerai votre équipe pour intervenir sur n'importe quel point de
-        votre stack Javascript / Typescript. Ayant une appétance pour le
-        frontend, je serai opérationnel sur votre application React, Vue, ou
-        Svelte. J'interviendrai également sur vos API en Node (Express, Loopback
-        ou NestJS). Enfin, mes compétences en réseau et système me permettent
-        d'intéragir aisément avec les différentes pipelines de CI/CD.
+        J'interviens sur n'importe quel point de votre stack Javascript /
+        Typescript en présentiel dans les environs de Lille ou en télétravail.
+        Ayant une appétance pour le frontend, je suis opérationnel sur votre
+        application React, Vue, ou Svelte. J'interviens également sur vos API en
+        Node (Express, Loopback ou NestJS). Enfin, mes compétences en réseau et
+        système me permettent d'intéragir aisément avec les différentes
+        pipelines de CI/CD.
       </p>
     </div>
     <div class='service'>
@@ -22,17 +23,18 @@ import Eclair from "./Eclair.astro";
       <p>
         Je produis du travail qualitatif et maintenable. Formé à la clean
         architecture, au TDD et habitué à travailler avec les méthodologies de
-        gestion de projet AGILE, je saurai remplir les exigences de qualité de
-        service et maintenir une forte réutilisabilité du code tout en
-        respectant les délais imposés. En front, je respecterai les exigences en
-        termes d'accessibilité, de performance et de SEO.
+        gestion de projet AGILE, il me tient à coeur de remplir les exigences de
+        qualité de service et de maintenir une forte réutilisabilité du code tout
+        en respectant les délais imposés. En front, je mets un point d'honneur à
+        respecter les exigences en termes d'accessibilité, de performance et de
+        SEO.
       </p>
     </div>
     <div class='service'>
       <h3>Sensible à l'éco-conception</h3>
       <p>
-        J'apporterai une nouvelle vision sur l'éco-conception de vos projets.
-        Mes armes: le serverless, l'optimisation des algorithmes, la réduction
+        Je peux apporter une nouvelle vision sur l'éco-conception de vos projets.
+        Mes armes : le serverless, l'optimisation des algorithmes, la réduction
         en taille des medias et flux de données.
       </p>
     </div>
@@ -73,6 +75,7 @@ import Eclair from "./Eclair.astro";
       position: relative;
       gap: 10rem;
       padding-top: 5rem;
+      z-index: 20;
       .service {
         z-index: 2;
         max-width: 40rem;
