--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -3,20 +3,21 @@ import SquareHammer from "./SquareHammer.astro";
 ---
 
 <section class='websiteCreation'>
-  <h2 class='subtitle'>Création de sites web</h2>
+  <h2 class='subtitle'>Voyage numérique</h2>
   <div class='content'>
     <div class='text'>
-      <h3>Création de sites web</h3>
+      <h3>Création et refonte de sites web</h3>
       <p>
-        Je réalise des <strong>sites web sur mesure</strong>, faciles à prendre
-        en main.<br />Vous pourrez choisir entre <strong
-          >un site statique</strong
-        > pour les petis budgets ou <strong>un site clé en main</strong> qui vous
-        permettra de créer et administrer vous-mêmes votre contenu.<br />Tous
-        mes sites sont <a href='creation-site-web#ecoconception'>éco-conçus</a>,
+        Chaque site web est pensé avec <strong
+          >une solution unique, sur-mesure</strong
+        > pour transporter vos utilisateurs dans un espace à votre image.<br
+        /><strong>Site statique</strong> pour les petis budgets ou <strong
+          >site clé en main</strong
+        > pour créer et administrer vous-mêmes votre contenu <strong>facilement</strong>.<br />Tous mes
+        sites sont <a href='creation-site-web#ecoconception'>éco-conçus</a>,
         optimisés pour mobiles, accessibles et performants.
       </p>
-      <a href='creation-site-web' class='services'>Découvrir mes services </a>
+      <a href='creation-site-web' class='services'>Découvrez mes services web</a>
       <svg
         class='circle'
         viewBox='0 0 800 800'
