--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -1,31 +1,31 @@
 <section class='website'>
-  <h2 class='subtitle'>Mes sites web</h2>
+  <h2 class='subtitle'>Des sites pleins de vie</h2>
   <div class='services'>
     <div class='service'>
-      <h3>Des sites sur mesure</h3>
+      <h3>Immergez vos utilisateurs avec des sites sur mesure</h3>
       <p>
         Les sites que je propose sont adaptés à votre projet et mettront en
         avant les valeurs que vous souhaitez transmettre. Je travaille en
-        partenariat avec une graphiste freelance pour vous propoer un design
+        partenariat avec une graphiste freelance pour vous proposer un design
         moderne et efficace.
       </p>
     </div>
     <div class='service'>
-      <h3>Des sites performants</h3>
+      <h3>Faites rimer performance et écologie</h3>
       <p>
-        Concus en priorité pour les mobiles, mes sites ont un poids réduit, un
+        L'éco-conception ne peut exister sans optimisation. Conçus en priorité pour les mobiles, mes sites ont un poids réduit, un
         temps de chargement rapide. Les médias sont optimisés pour les
         différents types d'appareils et le design s'adapte à toutes les tailles
         d'écran.
       </p>
     </div>
     <div class='service'>
-      <h3>Des sites clé en main</h3>
+      <h3>Gérez vous-même votre contenu web</h3>
       <p>
-        Vous pouvez en option avoir le contrôle total sur le contenu de votre
+        Vous pouvez garder un contrôle total sur le contenu de votre
         site. Créez vous-même les pages dont vous avez besoin à partir des
-        sections imaginées par le graphiste. Ajoutez et supprimez des pages à
-        votre convenance, modifiez vous-même vos textes pour coller à vos
+        sections préconçues. Ajoutez et supprimez des pages à
+        votre convenance, modifiez vous-même vos textes pour répondre à vos
         besoins en référencement. Ajoutez des sections à vos pages existantes
         pour promouvoir une offre temporaire.
       </p>
