--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -24,23 +24,23 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
       <ProjectCard
         className='scrollableCard'
         clientName='SpreadTheLive'
-        projectDescription="Application mobile de streaming video d'événements sportifs en React"
+        projectDescription="Application mobile de streaming video d'événements sportifs en React."
         mockup='/images/project-spreadthelive.webp'
         mockupName='SpreadTheLive'
       />
       <ProjectCard
         className='scrollableCard'
         clientName='Pauline Gorlier, Praticienne Bien-Être'
-        projectDescription='Site vitrine alimenté par le CMS git-based Decap.'
+        projectDescription='Site vitrine alimenté par le CMS git-based Decap. Il est donc entièrement paramétrable et conçu sur mesure.'
         link='https://pauline-gorlier.com'
         linkLabel='Voir le site'
         mockup='/images/project-pauline.webp'
         mockupName='Pauline Gorlier'
       />
       <div class='scrollableCard contactMe'>
-        <h2>Réalisons votre projet !</h2>
+        <h2>Faisons un bout de trajet ensemble !</h2>
         <p>
-          Mes projets vous intéressent et vous souhaiteriez que je développe
+          Mes projets vous intéressent et vous souhaitez que je développe
           votre site web ?
         </p>
         <BorderedButton link='mailto:info.lanvink@gmail.com'
