--- a/src/components/HeroFullstack.astro
+++ b/src/components/HeroFullstack.astro
@@ -5,9 +5,7 @@ import Clouds from "./Clouds.astro";
 
 <section class='heroFullStack' id="hero">
   <h1 id="title">
-    Des <strong>sites web</strong> pour les <em>grands</em> et les <span
-      class='boldIt'>petits projets</span
-    >
+    Un <strong>dev fullstack</strong> en immersion dans <em>votre équipe</em> !
   </h1>
   <Aurora />
   <Clouds />
