--- a/src/components/HeroSiteWeb.astro
+++ b/src/components/HeroSiteWeb.astro
@@ -4,9 +4,7 @@ import Partners from "./Partners.astro";
 
 <section class='heroSiteWeb' id="hero">
   <h1 id="title">
-    Des <strong>sites web</strong> pour les <em>grands</em> et les <span
-      class='boldIt'>petits projets</span
-    >
+    <strong>Faites</strong> <em>voyager</em> les utilisateurs dans votre <strong>univers web</strong>
   </h1>
   <div class="partnersHero">
     <Partners inverted title={ false } />
