--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -147,12 +147,13 @@ import Footer from "../components/Footer.astro";
   h1 {
     font-size: 4rem;
     font-family: Poppins;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 1.125em;
     width: 40rem;
     margin: 0;
     padding: 1rem 0;
-    color: #ffffff80;
+    color: #ffffffa0;
+    text-shadow: 0px 0px 50px #000000a0;
     background: linear-gradient(
         90deg,
         rgba(255, 255, 255, 0.1),
@@ -169,11 +170,7 @@ import Footer from "../components/Footer.astro";
       font-weight: 900;
     }
     em {
-      font-weight: 200;
-    }
-    .boldIt {
-      font-weight: bold;
-      font-style: italic;
+      font-weight: 100;
     }
   }
   .subtitle {
