--- a/src/components/BorderedButton.astro
+++ b/src/components/BorderedButton.astro
@@ -14,6 +14,7 @@ const { addedClasses = "", link = "", newTab = false } = Astro.props;
   .buttonContainer {
     position: relative;
     container-type: normal;
+    max-width: 100%;
     &:hover {
       .square1 {
         transform: translateX(calc(100% - 6rem));
@@ -74,16 +75,12 @@ const { addedClasses = "", link = "", newTab = false } = Astro.props;
     border-radius: 5rem;
     padding: 1rem 2rem;
     backdrop-filter: blur(5px);
-    white-space: nowrap;
     width: max-content;
+    max-width: 100%;
     font-weight: bold;
     font-size: 1rem;
     display: block;
     text-decoration: none;
-  }
-  @media screen and (max-width: 600px) {
-    .borderedButton {
-      font-size: 1rem;
-    }
+    text-align: center;
   }
 </style>
