--- a/src/components/SimpleSection.astro
+++ b/src/components/SimpleSection.astro
@@ -15,8 +15,8 @@ import BorderedButton from "./BorderedButton.astro";
           src='/images/muchas-glacias.svg'
           alt='Muchas glacias performances'
         />
-        <BorderedButton link='#' addedClasses='centeredButton'
-          >Découvrez la note de mon site</BorderedButton
+        <BorderedButton link='#' addedClasses='centeredButton' newTab
+          >Découvrez la note du site</BorderedButton
         >
       </div>
     </div>
