Try to fix multiple src img

--- a/src/components/SimpleSection.astro
+++ b/src/components/SimpleSection.astro
@@ -11,7 +11,7 @@ import BorderedButton from "./BorderedButton.astro";
         <p>La performance au coeur de l'expérience</p>
         <img
           srcset='/images/muchas-glacias-mobile.svg 600w, /images/muchas-glacias.svg 800w'
-          sizes='(max-width: 600px) 600px, 800px'
+          sizes='(max-width: 600px) 600px, (min-width: 601px) 800px'
           src='/images/muchas-glacias.svg'
           alt='Muchas glacias performances'
         />
