--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -209,6 +209,7 @@ import BorderedButton from "./BorderedButton.astro";
     }
     :global(.pricesContactButton) {
       z-index: 2;
+      align-self: center;
     }
     .circle {
       width: 60rem;
