--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -9,7 +9,7 @@ import BorderedButton from "./BorderedButton.astro";
   </h2>
   <BorderedButton
     addedClasses='contactButton'
-    link='mailto:info.lanvink@gmail.com'
+    link='/contact'
   >
     Contactez-moi !
   </BorderedButton>
