--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ const currentPath = pathname.slice(1);
   </nav>
   <BorderedButton
     addedClasses='headerButton'
-    link='mailto:info.lanvink@gmail.com'>Me contacter</BorderedButton
+    link='/contact'>Me contacter</BorderedButton
   >
   <div class='menuMobileButton'>
     <input type='checkbox' name='menuMobileToggle' id='menuMobileToggle' />
@@ -48,7 +48,7 @@ const currentPath = pathname.slice(1);
       >
       <BorderedButton
         addedClasses='mobileHeaderButton'
-        link='mailto:info.lanvink@gmail.com'>Me contacter</BorderedButton
+        link='/contact'>Me contacter</BorderedButton
       >
     </nav>
   </div>
