--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -47,7 +47,7 @@ import BorderedButton from "./BorderedButton.astro";
   </div>
   <BorderedButton
     addedClasses='pricesContactButton'
-    link='mailto:info.lanvink@gmail.com'
+    link='/contact'
   >
     Contactez-moi pour un projet web
   </BorderedButton>
@@ -101,7 +101,7 @@ import BorderedButton from "./BorderedButton.astro";
   </div>
   <BorderedButton
     addedClasses='pricesContactButton'
-    link='mailto:info.lanvink@gmail.com'
+    link='/contact'
   >
     Contactez-moi pour la partie graphique
   </BorderedButton>
