--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -43,7 +43,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
           Mes projets vous intéressent et vous souhaitez que je développe
           votre site web ?
         </p>
-        <BorderedButton link='mailto:info.lanvink@gmail.com'
+        <BorderedButton link='/contact'
           >Contactez moi !</BorderedButton
         >
       </div>
