--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
     <h1>Contact</h1>
     <div class='contactCard'>
       <h2 id='title'>
-        Explorons <em>ensemble</em> de <strong>nouveaux horizons</strong>
+        Explorons <em>ensemble</em> de<br /><strong>nouveaux horizons</strong>
       </h2>
       <p class='baseline'>
         Vous souhaitez une création ou une refonte de site web ?<br />Besoin
@@ -96,7 +96,7 @@ import Layout from "../layouts/Layout.astro";
       align-items: center;
       gap: 2rem;
       h2 {
-        font-size: 4rem;
+        font-size: 3rem;
         font-family: Poppins;
         font-weight: 500;
         line-height: 1.125em;
@@ -106,6 +106,8 @@ import Layout from "../layouts/Layout.astro";
         text-align: center;
         strong {
           font-weight: 900;
+          font-size: 4rem;
+          font-size: 1.125em;
         }
         em {
           font-weight: 100;
