--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -4,11 +4,11 @@ import BorderedButton from "./BorderedButton.astro";
 
 <section class='contactSection'>
   <div class='fog'></div>
-  <h2>
+  <h2 class="animatedScrollContent">
     Prêt à <strong>embarquer</strong> pour votre<br /><em>prochain projet ?</em>
   </h2>
   <BorderedButton
-    addedClasses='contactButton'
+    addedClasses='contactButton animatedScrollContent'
     link='/contact'
   >
     Contactez-moi !
