--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -3,25 +3,26 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='lastWork'>
-  <h2 class='subtitle'>Dernière aventure web</h2>
+  <h2 class='subtitle animatedScrollContent'>Dernière aventure web</h2>
   <div class='lastWorkContent'>
     <div class='gridText'>
-      <h3>Découvrez ma dernière réalisation web</h3>
-      <p>
+      <h3 class="animatedScrollContent">Découvrez ma dernière réalisation web</h3>
+      <p class="animatedScrollContent">
         Refonte d'un site vitrine clé en main en partenariat avec l'agence
         lilloise Dalt.
       </p>
       <ul>
-        <li>Amélioration de l'expérience utilisateur</li>
-        <li>Amélioration des performances</li>
-        <li>Refonte complète du tunnel de commande</li>
+        <li class="animatedScrollContent">Amélioration de l'expérience utilisateur</li>
+        <li class="animatedScrollContent">Amélioration des performances</li>
+        <li class="animatedScrollContent">Refonte complète du tunnel de commande</li>
       </ul>
-      <BorderedButton link='portfolio'
+      <BorderedButton link='portfolio' addedClasses='animatedScrollContent'
         >Découvrez mes réalisations
       </BorderedButton>
     </div>
     <div class='gridImage'>
       <img
+        class="animatedScrollContent"
         width='1076'
         height='980'
         src='/images/lastwork.webp'
