--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -3,12 +3,12 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='prices'>
-  <h2 class='subtitle'>Services web</h2>
-  <h3 class='cardsTitle'>Mes services web</h3>
-  <p class='description'>
+  <h2 class='subtitle animatedScrollContent'>Services web</h2>
+  <h3 class='cardsTitle animatedScrollContent'>Mes services web</h3>
+  <p class='description animatedScrollContent'>
     Retrouvez mes tarifs adaptés aux petits comme aux grands budgets.
   </p>
-  <div class='priceCard'>
+  <div class='priceCard animatedScrollContent'>
     <div class='header'>
       <h3>Développement de site web</h3>
       <span class='price'>A partir de 2000€</span>
@@ -46,16 +46,16 @@ import BorderedButton from "./BorderedButton.astro";
     </div>
   </div>
   <BorderedButton
-    addedClasses='pricesContactButton'
+    addedClasses='pricesContactButton animatedScrollContent'
     link='/contact'
   >
     Contactez-moi pour un projet web
   </BorderedButton>
-  <h3 class='cardsTitle'>Mes partenaires</h3>
-  <p class='description'>
+  <h3 class='cardsTitle animatedScrollContent'>Mes partenaires</h3>
+  <p class='description animatedScrollContent'>
     Je m'entoure de freelances pour mener vos projets web à bon port.
   </p>
-  <div class='priceCard'>
+  <div class='priceCard animatedScrollContent'>
     <div class='header'>
       <h3>Identité visuelle</h3>
       <span class='price'>A partir de 600€</span>
@@ -100,7 +100,7 @@ import BorderedButton from "./BorderedButton.astro";
     </ul>
   </div>
   <BorderedButton
-    addedClasses='pricesContactButton'
+    addedClasses='pricesContactButton animatedScrollContent'
     link='/contact'
   >
     Contactez-moi pour la partie graphique
