--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -3,12 +3,12 @@ import Eclair from "./Eclair.astro";
 ---
 
 <section class='strengths'>
-  <h2 class='subtitle'>Pourquoi me choisir ?</h2>
+  <h2 class='subtitle animatedScrollContent'>Pourquoi me choisir ?</h2>
   <Eclair />
   <div class='services'>
     <div class='service'>
-      <h3>Développeur Fullstack à Lille et dans la métropole</h3>
-      <p>
+      <h3 class="animatedScrollContent">Développeur Fullstack à Lille et dans la métropole</h3>
+      <p class="animatedScrollContent">
         J'interviens sur n'importe quel point de votre stack Javascript /
         Typescript en présentiel dans les environs de Lille ou en télétravail.
         Ayant une appétance pour le frontend, je suis opérationnel sur votre
@@ -19,8 +19,8 @@ import Eclair from "./Eclair.astro";
       </p>
     </div>
     <div class='service'>
-      <h3>Qualité et maintenabilité</h3>
-      <p>
+      <h3 class="animatedScrollContent">Qualité et maintenabilité</h3>
+      <p class="animatedScrollContent">
         Je produis du travail qualitatif et maintenable. Formé à la clean
         architecture, au TDD et habitué à travailler avec les méthodologies de
         gestion de projet AGILE, il me tient à coeur de remplir les exigences de
@@ -31,8 +31,8 @@ import Eclair from "./Eclair.astro";
       </p>
     </div>
     <div class='service'>
-      <h3>Sensible à l'éco-conception</h3>
-      <p>
+      <h3 class="animatedScrollContent">Sensible à l'éco-conception</h3>
+      <p class="animatedScrollContent">
         Je peux apporter une nouvelle vision sur l'éco-conception de vos projets.
         Mes armes : le serverless, l'optimisation des algorithmes, la réduction
         en taille des medias et flux de données.
