--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -3,11 +3,11 @@ import SquareHammer from "./SquareHammer.astro";
 ---
 
 <section class='websiteCreation'>
-  <h2 class='subtitle'>Voyage numérique</h2>
+  <h2 class='subtitle animatedScrollContent'>Voyage numérique</h2>
   <div class='content'>
     <div class='text'>
-      <h3>Création et refonte de sites web</h3>
-      <p>
+      <h3 class="animatedScrollContent">Création et refonte de sites web</h3>
+      <p class="animatedScrollContent">
         Chaque site web est pensé avec <strong
           >une solution unique, sur-mesure</strong
         > pour transporter vos utilisateurs dans un espace à votre image.<br
@@ -17,7 +17,7 @@ import SquareHammer from "./SquareHammer.astro";
         sites sont <a href='creation-site-web#ecoconception'>éco-conçus</a>,
         optimisés pour mobiles, accessibles et performants.
       </p>
-      <a href='creation-site-web' class='services'>Découvrez mes services web</a>
+      <a href='creation-site-web' class='services animatedScrollContent'>Découvrez mes services web</a>
       <svg
         class='circle'
         viewBox='0 0 800 800'
@@ -38,7 +38,7 @@ import SquareHammer from "./SquareHammer.astro";
           stroke='url(#circleGradient)'></circle>
       </svg>
     </div>
-    <div class='bigSquare'>
+    <div class='bigSquare animatedScrollContent'>
       <SquareHammer class='squareHammer' />
     </div>
   </div>
