--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -1,9 +1,9 @@
 <section class='website'>
-  <h2 class='subtitle'>Des sites pleins de vie</h2>
+  <h2 class='subtitle animatedScrollContent'>Des sites pleins de vie</h2>
   <div class='services'>
     <div class='service'>
-      <h3>Immergez vos utilisateurs avec des sites sur mesure</h3>
-      <p>
+      <h3 class="animatedScrollContent">Immergez vos utilisateurs avec des sites sur mesure</h3>
+      <p class="animatedScrollContent">
         Les sites que je propose sont adaptés à votre projet et mettront en
         avant les valeurs que vous souhaitez transmettre. Je travaille en
         partenariat avec une graphiste freelance pour vous proposer un design
@@ -11,8 +11,8 @@
       </p>
     </div>
     <div class='service'>
-      <h3>Faites rimer performance et écologie</h3>
-      <p>
+      <h3 class="animatedScrollContent">Faites rimer performance et écologie</h3>
+      <p class="animatedScrollContent">
         L'éco-conception ne peut exister sans optimisation. Conçus en priorité pour les mobiles, mes sites ont un poids réduit, un
         temps de chargement rapide. Les médias sont optimisés pour les
         différents types d'appareils et le design s'adapte à toutes les tailles
@@ -20,8 +20,8 @@
       </p>
     </div>
     <div class='service'>
-      <h3>Gérez vous-même votre contenu web</h3>
-      <p>
+      <h3 class="animatedScrollContent">Gérez vous-même votre contenu web</h3>
+      <p class="animatedScrollContent">
         Vous pouvez garder un contrôle total sur le contenu de votre
         site. Créez vous-même les pages dont vous avez besoin à partir des
         sections préconçues. Ajoutez et supprimez des pages à
