--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -3,35 +3,46 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='ecoconception' id='ecoconception'>
-  <h2 class='subtitle'>Au pays de l'éco-conception</h2>
+  <h2 class='subtitle animatedScrollContent'>Au pays de l'éco-conception</h2>
   <div class='content'>
-    <h3>Faisons le tour des idées reçues,<br />ce qu'un site éco-conçu N'est PAS :</h3>
+    <h3 class='animatedScrollContent'>
+      Faisons le tour des idées reçues,<br />ce qu'un site éco-conçu N'est PAS :
+    </h3>
     <ul>
-      <li>
+      <li class='animatedScrollContent'>
         Un Wordpress. Un site éco-conçu ne laisse pas de serveur ni de base de
         données allumés quand ce n'est pas nécessaire.
       </li>
-      <li>
+      <li class='animatedScrollContent'>
         Un site en noir et blanc. Economiser des pixels ne représente pas une
         économie d'énergie significative.
       </li>
-      <li>
-        Un site sans image. Bien optimisés, les medias ne sont pas un problème et votre site peut briller de mille feux.
+      <li class='animatedScrollContent'>
+        Un site sans image. Bien optimisés, les medias ne sont pas un problème
+        et votre site peut briller de mille feux.
       </li>
-      <li>
+      <li class='animatedScrollContent'>
         Un site figé. Les animations correctement conçues sont peu gourmandes en
         ressources. Ajoutons de la vie à votre site !
       </li>
-      <li>
+      <li class='animatedScrollContent'>
         Un site impossible à modifier en temps réel. Les technologies modernes
         permettent de modifier vos pages en gardant un impact minimal sur
         l'environnement.
       </li>
     </ul>
-    <BorderedButton link="/services">Découvrez qui je suis</BorderedButton>
+    <BorderedButton link='/services' addedClasses='animatedScrollContent'
+      >Découvrez qui je suis</BorderedButton
+    >
   </div>
   <div class='peacock'>
-    <img src='/images/peacock.webp' alt='Peacock' width='747' height='783' />
+    <img
+      src='/images/peacock.webp'
+      alt='Peacock'
+      width='747'
+      height='783'
+      class='animatedScrollContent'
+    />
   </div>
 </section>
 
